@@ -1,11 +1,15 @@
 import org.junit.jupiter.api.Test;
+import java.time.Duration;
+import java.time.LocalDateTime;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class HistoryManagerTest {
 
     private final HistoryManager historyManager = Managers.getDefaultHistoryManager();
-    private final Task task = new Task("Test Task", "Test Description", Status.NEW);
+    // Используем конкретный подкласс RegularTask
+    private final Task task = new RegularTask("Test Task", "Test Description",
+            Status.NEW, Duration.ofMinutes(60), LocalDateTime.now());
 
     @Test
     void addTaskToHistory_TaskAdded_HistoryContainsTask() {
@@ -14,6 +18,6 @@ class HistoryManagerTest {
 
         assertNotNull(history, "History should not be null.");
         assertEquals(1, history.size(), "History should contain one task.");
-        assertEquals(task, history.getFirst(), "Task in history should be equal to added task.");
+        assertEquals(task, history.get(0), "Task in history should be equal to added task.");
     }
 }
